# SGM-SYS

./: README.md  package-lock.json  package.json
docs/: ANDROID_APP_PRD.md  PRD_Sistem_Toko_Emas_EmasPOS.docx
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  gold_prices.rs  inventory.rs  mod.rs  reports.rs  sync.rs  transactions.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/models/: mod.rs
src-tauri/src/salesforce/: api.rs  auth.rs  client.rs  mapper.rs  mod.rs
src-tauri/src/sync/: change_tracker.rs  engine.rs  mod.rs  pull.rs  push.rs
src/api/: auth.ts  customers.ts  goldPrices.ts  index.ts  inventory.ts  reports.ts  sync.ts  transactions.ts
src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
src/components/receipt/: ReceiptPreview.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Select.tsx  Table.tsx  index.ts
src/hooks/: useAuth.tsx  useCustomers.ts  useGoldPrices.ts  useInventory.ts  useReports.ts  useSync.ts  useTransactions.ts  useUsers.ts
src/lib/: utils.ts
src/pages/: Login.tsx  index.ts
src/pages/buyback/: BuybackPage.tsx
src/pages/dashboard/: DashboardPage.tsx
src/pages/exchange/: ExchangePage.tsx
src/pages/gold-prices/: GoldPricesPage.tsx
src/pages/inventory/: InventoryPage.tsx
src/pages/pos/: POSPage.tsx
src/pages/reports/: ReportsPage.tsx
src/pages/settings/: SettingsPage.tsx
src/pages/users/: UsersPage.tsx
src/store/: cartStore.ts
src/types/: index.ts
