[package]
name = "emaspos"
version = "1.0.0"
description = "EmasPOS - Sistem Manajemen Toko Emas"
authors = ["EmasPOS Team"]
edition = "2021"

[lib]
name = "emaspos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.16"
thiserror = "2"
anyhow = "1"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }
